; ModuleID = '/home/carl/AnghaBench/libgit2/tests/stash/extr_drop.c_test_stash_drop__dropping_an_entry_rewrites_reflog_history.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/stash/extr_drop.c_test_stash_drop__dropping_an_entry_rewrites_reflog_history.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@repo = common dso_local global i32 0, align 4
@GIT_REFS_STASH_FILE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_stash_drop__dropping_an_entry_rewrites_reflog_history() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = call i32 (...) @push_three_states()
  %7 = load i32, i32* @repo, align 4
  %8 = load i32, i32* @GIT_REFS_STASH_FILE, align 4
  %9 = call i32 @git_reference_lookup(i32** %1, i32 %7, i32 %8)
  %10 = call i32 @cl_git_pass(i32 %9)
  %11 = load i32, i32* @repo, align 4
  %12 = load i32, i32* @GIT_REFS_STASH_FILE, align 4
  %13 = call i32 @git_reflog_read(i32** %2, i32 %11, i32 %12)
  %14 = call i32 @cl_git_pass(i32 %13)
  %15 = load i32*, i32** %2, align 8
  %16 = call i32* @git_reflog_entry_byindex(i32* %15, i32 1)
  store i32* %16, i32** %3, align 8
  %17 = load i32*, i32** %3, align 8
  %18 = call i32 @git_reflog_entry_id_old(i32* %17)
  %19 = call i32 @git_oid_cpy(i32* %4, i32 %18)
  %20 = load i32*, i32** %2, align 8
  %21 = call i64 @git_reflog_entrycount(i32* %20)
  store i64 %21, i64* %5, align 8
  %22 = load i32*, i32** %2, align 8
  %23 = call i32 @git_reflog_free(i32* %22)
  %24 = load i32, i32* @repo, align 4
  %25 = call i32 @git_stash_drop(i32 %24, i32 1)
  %26 = call i32 @cl_git_pass(i32 %25)
  %27 = load i32, i32* @repo, align 4
  %28 = load i32, i32* @GIT_REFS_STASH_FILE, align 4
  %29 = call i32 @git_reflog_read(i32** %2, i32 %27, i32 %28)
  %30 = call i32 @cl_git_pass(i32 %29)
  %31 = load i32*, i32** %2, align 8
  %32 = call i32* @git_reflog_entry_byindex(i32* %31, i32 0)
  store i32* %32, i32** %3, align 8
  %33 = load i32*, i32** %3, align 8
  %34 = call i32 @git_reflog_entry_id_old(i32* %33)
  %35 = call i32 @cl_assert_equal_oid(i32* %4, i32 %34)
  %36 = load i64, i64* %5, align 8
  %37 = sub i64 %36, 1
  %38 = load i32*, i32** %2, align 8
  %39 = call i64 @git_reflog_entrycount(i32* %38)
  %40 = call i32 @cl_assert_equal_sz(i64 %37, i64 %39)
  %41 = load i32*, i32** %2, align 8
  %42 = call i32 @git_reflog_free(i32* %41)
  %43 = load i32*, i32** %1, align 8
  %44 = call i32 @git_reference_free(i32* %43)
  ret void
}

declare dso_local i32 @push_three_states(...) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_reference_lookup(i32**, i32, i32) #1

declare dso_local i32 @git_reflog_read(i32**, i32, i32) #1

declare dso_local i32* @git_reflog_entry_byindex(i32*, i32) #1

declare dso_local i32 @git_oid_cpy(i32*, i32) #1

declare dso_local i32 @git_reflog_entry_id_old(i32*) #1

declare dso_local i64 @git_reflog_entrycount(i32*) #1

declare dso_local i32 @git_reflog_free(i32*) #1

declare dso_local i32 @git_stash_drop(i32, i32) #1

declare dso_local i32 @cl_assert_equal_oid(i32*, i32) #1

declare dso_local i32 @cl_assert_equal_sz(i64, i64) #1

declare dso_local i32 @git_reference_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
